# gw2formats

./: CMakeLists.txt
include/gw2formats/: StringsFile.h  base.h
include/gw2formats/pf/: PackFile.h
include/gw2formats/pf/chunks/CINP/: SceneData.h
include/gw2formats/pf/helpers/: Array.h  Vector.h
src/: CMakeLists.txt  StringsFile.cpp  TextureFile.cpp
src/bxml2/: Bxml2Reader.cpp  XmlAttribute.cpp  XmlElement.cpp
src/pf/chunks/CINP/: SceneData.cpp
